@@ -7,6 +7,7 @@ pts-core: Add Parent tag to result file schema for specifying relation to other 
 pts-core: Report test profile support errors when intended
 pts-core: Fix showing NVIDIA test options on non-Linux NVIDIA platforms
 pts-core: Don't show delete/annotation options for dynamically generated result objects where those options are not relevant
+pts-core: Allow showing performance-per-suite option within result viewer
 pts_Graph: When going to PDF with GD library, just use the OB rather than temporary file
 pts_Graph: Restore support for error bars on vertical bar graph rendering
 pts_Graph: Support for simpler view / rendering without header/footer
